Updated physics for top down shooter

--- a/game.html
+++ b/game.html
@@ -23,7 +23,6 @@ var config = {
     physics: {
         default: 'arcade',
         arcade: {
-            gravity: { y: 300 },
             debug: false
         }
     },
@@ -75,7 +74,7 @@ function create ()
     player = this.physics.add.sprite(100, 450, 'dude');
 
     //  Player physics properties. Give the little guy a slight bounce.
-    player.setBounce(0.2);
+    //player.setBounce(0.2);
     player.setCollideWorldBounds(true);
 
     //  Our player animations, turning, walking left and walking right.
@@ -151,16 +150,19 @@ function update ()
 
         player.anims.play('right', true);
     }
+    else if(cursors.down.isDown)
+    {
+        player.setVelocityY(160);
+    }
+    else if (cursors.up.isDown)
+    {
+        player.setVelocityY(-160);
+    }
     else
     {
         player.setVelocityX(0);
-
+        player.setVelocityY(0);
         player.anims.play('turn');
-    }
-
-    if (cursors.up.isDown && player.body.touching.down)
-    {
-        player.setVelocityY(-330);
     }
 }
 
