--- a/game.html
+++ b/game.html
@@ -3,9 +3,9 @@
 <head> 
     <meta charset="UTF-8" />
     <title>Demo Game</title>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.min.js"></script>
+    <script src="cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.min.js"></script>
 
-    "></script>
+    </script>
     <style type="text/css">
         body {
             margin: 0;
