--- a/index.html
+++ b/index.html
@@ -1,33 +1,9 @@
-<!--<!doctype.htlml>
-<html> 
-<head> 
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.5.1/dist/phaser.min.js"></script>
-    <!--Game is called after levels
-    <script src="stage.js"></script>
-    <script src="game.js"></script>
-</head>
-<body>
-</body>
-
-</html>-->
-
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
-    <title>Phaser</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <style>
-        html,
-        body {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-        }
-    </style>
-</head>
-<body>
-    <div id="content"></div>
-</body>
+    <title>Webpack App</title>
+  </head>
+  <body>
+  <script type="text/javascript" src="./dev/vendor.js"></script><script type="text/javascript" src="./dev/app.js"></script></body>
 </html>
